<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_camera"
        android:title="@string/action_camera"
        android:icon="@drawable/ic_photo_camera_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_wifi"
        android:title="@string/action_wifi"
        android:icon="@drawable/ic_wifi_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_keyboard"
        android:title="@string/action_keyboard"
        android:icon="@drawable/ic_keyboard_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom"/>

</menu>